    for Logtalk source files to the Windows installer.

    Updated the RPM spec file and build script to no longer require root
    access. The RPM package built from these files is no longer relocatable.

    Updated the POSIX (un)install shell scripts to print the version number
    of the Logtalk release being (un)installed.

    Added information about using the Sublime Text Windows text editor for
    editing Logtalk source files.


2.37.4 - September 18, 2009

    Updated the Logtalk compiler to expand calls to the forall/2 and once/1
    built-in predicates in order to improve performance.

    Corrected a bug in the Logtalk compiler that resulted in some calls to the
    built-in predicate call/1 being transparent to cuts in its goal argument.

    Updated the Logtalk runtime to try to detect and warn about incompatible
    back-end Prolog compiler versions.

    Updated the Logtalk runtime to avoid spurious type errors when working
    with parametric objects using ECLiPSe due to the weak ISO Prolog standard
    compliance of this compiler.

    Added two new commands to the Logtalk built-in debugger for writing the
    current goal as a quoted term and for removing context spy points at
    leashed ports.

    Added a logtalk_library_path/2 entry for the library "home" (the user home
    directory) when running on POSIX operating-systems.

    The library object "pairs" in now loaded by the "types_loader.lgt" loader
    file.

    Updated the Qu-Prolog integration script in order to set the choice point
    stack to 256KB in order to support loading larger Logtalk applications.
    Updated the Qu-Prolog config file in order to set the default value of the
    "tmpdir" to '.lgt_tmp/'.

    Updated the B-Prolog and SICStus Prolog config files in order to set
    the default value of the "tmpdir" depending on the operating-system by
    checking for a POSIX-only default environment variable.
